@@ -19,6 +19,7 @@ module Administrate
 
       DEFAULT_FIELD_TYPE = "Field::String"
       TABLE_ATTRIBUTE_LIMIT = 4
+      READ_ONLY_ATTRIBUTES = %w[id created_at updated_at]
 
       source_root File.expand_path("../templates", __FILE__)
 
@@ -37,6 +38,10 @@ module Administrate
 
       def attributes
         klass.reflections.keys + klass.attribute_names - redundant_attributes
+      end
+
+      def form_attributes
+        attributes - READ_ONLY_ATTRIBUTES
       end
 
       def redundant_attributes
